Верстка раздела Атлеты

--- a/index.html
+++ b/index.html
@@ -55,21 +55,31 @@
                   </a>
                </div>
           </div>    
-      </div>
-               
+      </div>               
     </header>
-    <main class="main">
-      <div class="main-container">
-            <article class="sportmans-list">
-                <section class="athlets">
-                  <h1 class="title">Athlets</h1>
-                  <section class="info-list">
-                    <h2 class="info-list-title">Connection</h2>
-                    <p class="info-list-text">Connect with coaches directly, you can ping coaches to view profile.</p>
-                  </section>                
-                </section>
-            </article>
-      </div>
+    <main class="main">            
+      <section class="athlets">
+        <h1 class="athlets-title">Athlets</h1>
+        <img src="../project/images/img/footballer_192.png" alt="footballer" class="footballer">
+        <article class="connection-list-info">
+          <section class="connection-info">
+              <h2 class="info-list-title connection">Connection</h2>
+              <p class="info-list-text">Connect with coaches directly, you can ping coaches to view profile.</p>
+            </section>
+        </article>
+        <article class="collaboration-list-info">
+            <section class="collaboration-info">
+                <h2 class="info-list-title collaboration">Collaboration</h2>
+                <p class="info-list-text">Work with other student athletes to  increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.</p>
+            </section>
+        </article>
+        <article class="growth-list-info">
+            <section class="growth-info">
+                <h2 class="info-list-title growth">Growth</h2>
+                <p class="info-list-text">Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc</p>
+            </section>
+        </article>                      
+      </section>
     </main>
 </body>
 </html>
