--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <main class="main">            
       <section class="athlets">
         <h1 class="athlets-title">Athlets</h1>
-        <img src="./images/img/footballer_192.png" alt="footballer" class="footballer">
+        <img src="images/img/footballer_192.png" alt="footballer" class="footballer">
         <article class="connection-list-info">
           <section class="connection-info">
               <h2 class="info-list-title connection">Connection</h2>
