--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
       <div class="cards">
         <article class="card">
           <h1 class="cards-title">Athlets</h1>
-          <img src="./images/img/footballer_192.png" alt="footballer" class="card-image footballer">
+          <div class="footballer">
+            <div class="footballer-img">
+                <img src="./images/img/footballer_192.png" alt="footballer" class="card-image">
+            </div>              
+          </div>          
           <div class="connection">
             <div class="card-info">
                 <h2 class="title">Connection</h2>
@@ -88,7 +92,11 @@
         </article>
         <article class="card">
             <h1 class="cards-title">Players</h1>
-            <img src="./images/img/basketballer_302.png" alt="basketballer" class="card-image basketballer">
+            <div class="basketballer">
+              <div class="basketballer-img">
+                  <img src="./images/img/basketballer_302.png" alt="basketballer" class="card-image">
+              </div>                
+            </div>            
             <div class="connection">
               <div class="card-info">
                   <h2 class="title">Connection</h2>
