верстка основного макета для мобильных телефонов

--- a/index.html
+++ b/index.html
@@ -66,65 +66,94 @@
     </div>
   </header>
   <main class="main">
-    <div class="main-container">
-      <div class="cards">
-        <article class="card">
-          <h1 class="cards-title">Athlets</h1>
-          <div class="footballer">
-            <div class="footballer-img">
-                <img src="./images/img/footballer_192.png" alt="footballer" class="card-image">
-            </div>              
-          </div>          
-          <div class="connection">
-            <div class="card-info">
-                <h2 class="title">Connection</h2>
-                <p class="card-text">Connect with coaches directly, you can ping coaches to view profile</p>
-            </div>            
-          </div>
-          <div class="collaboration">
-              <div class="card-info">
-                  <h2 class="title">Collaboration</h2>
-                  <p class="card-text">Work with other student athletes to increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.</p>
-                </div>
-          </div>
-          <div class="growth">
-              <div class="card-info">
-                  <h2 class="title">Growth</h2>
-                  <p class="card-text">Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc</p>
-                </div>
-          </div>         
-        </article>
-        <article class="card">
-            <h1 class="cards-title">Players</h1>
-            <div class="basketballer">
-              <div class="basketballer-img">
-                  <img src="./images/img/basketballer_302.png" alt="basketballer" class="card-image">
-              </div>                
-            </div>            
-            <div class="connection">
-              <div class="card-info">
-                  <h2 class="title">Connection</h2>
-                  <p class="card-text">Connect with coaches directly, you can ping coaches to view profile</p>
-              </div>            
-            </div>
-            <div class="collaboration">
-                <div class="card-info">
-                    <h2 class="title">Collaboration</h2>
-                    <p class="card-text">Work with recruiter to increase your chanses of findingtalented athlete.</p>
-                  </div>
-            </div>
-            <div class="growth players-growth">
-                <div class="card-info">
-                    <h2 class="title">Growth</h2>
-                    <p class="card-text">Save your time recruit proper athlets for your team.</p>
-                  </div>
-            </div>         
-          </article>
-      </div>
-    </div>
+        <div class="main-container">
+            <div class="cards-list">
+                <section class="card athlets">
+                    <div class="card-title">
+                        <h1 class="athlets-title">Athlets</h1>
+                    </div>                    
+                    <div class="card-img">
+                        <img src="./images/img/footballer_192.png" alt="footballer" class="footballer">
+                    </div>
+                    <section class="card-info connection">
+                        <div class="card-info-title">
+                            <span class="number">01</span>
+                            <h2 class="title">Connection</h2>
+                        </div>
+                        <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                    </section>
+                    <section class="card-info collaboration">
+                            <div class="card-info-title">
+                                <span class="number">02</span>
+                                <h2 class="title">Collaboration</h2>
+                            </div>
+                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                    </section>
+                    <section class="card-info growth">
+                            <div class="card-info-title">
+                                <span class="number">03</span>
+                                <h2 class="title">Growth</h2>
+                            </div>
+                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                    </section>                                    
+                </section>
+                <section class="card players">
+                        <div class="card-title">
+                            <h1 class="players-title">Players</h1>
+                        </div>                    
+                        <div class="card-img">
+                            <img src="./images/img/basketballer_302.png" alt="basketballer" class="basketballer">
+                        </div>
+                        <section class="card-info connection">
+                            <div class="card-info-title">
+                                <span class="number">01</span>
+                                <h2 class="title">Connection</h2>
+                            </div>
+                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                        </section>
+                        <section class="card-info collaboration">
+                                <div class="card-info-title">
+                                    <span class="number">02</span>
+                                    <h2 class="title">Collaboration</h2>
+                                </div>
+                                <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                        </section>
+                        <section class="card-info growth">
+                                <div class="card-info-title">
+                                    <span class="number">03</span>
+                                    <h2 class="title">Growth</h2>
+                                </div>
+                                <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                        </section>                                    
+                </section> 
+                <section class="card action">
+                  <section class="card-info">
+                    <div><img src="./images/img/be-active_640.jpg" alt="be-active" class="action-img"></div>
+                      <div class="card-info-title">
+                          <span class="number">01</span>                          
+                      </div>
+                      <h2 class="title">Be active</h2>
+                      <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                  </section>
+                  <section class="card-info">
+                          <div><img src="./images/img/find-contact_640.jpg" alt="be-active" class="action-img"></div>
+                          <div class="card-info-title">
+                              <span class="number">02</span>                              
+                          </div>
+                          <h2 class="title">Find contact</h2>
+                          <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                  </section>
+                  <section class="card-info">
+                          <div><img src="./images/img/work-it_640.jpg" alt="be-active" class="action-img"></div>
+                          <div class="card-info-title">
+                              <span class="number">03</span>                              
+                          </div>
+                          <h2 class="title">Work it</h2>
+                          <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                  </section>                                    
+          </section> 
+           </div>
+        </div>
   </main>
-  <footer class="footer">
-
-  </footer>
 </body>
 </html>
