Верстка мобильной версии

--- a/index.html
+++ b/index.html
@@ -80,21 +80,21 @@
                             <span class="number">01</span>
                             <h2 class="title">Connection</h2>
                         </div>
-                        <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                        <p class="card-info-text">Connect with coaches directly, you can ping coaches to view profile.</p>
                     </section>
                     <section class="card-info collaboration">
                             <div class="card-info-title">
                                 <span class="number">02</span>
                                 <h2 class="title">Collaboration</h2>
                             </div>
-                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                            <p class="card-info-text">Work with other student athletes to increase visability. When you share and like other players videos it will increase your visability as a player. This is the team work aspect to Surface 1.</p>
                     </section>
                     <section class="card-info growth">
                             <div class="card-info-title">
                                 <span class="number">03</span>
                                 <h2 class="title">Growth</h2>
                             </div>
-                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                            <p class="card-info-text">Resources and tools for you to get better as a student Athelte. Access to training classes, tutor sessions, etc</p>
                     </section>                                    
                 </section>
                 <section class="card players">
@@ -109,21 +109,21 @@
                                 <span class="number">01</span>
                                 <h2 class="title">Connection</h2>
                             </div>
-                            <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                            <p class="card-info-text">Connect with talented athlete directly, you can watch their skills through video showreels directly from Surface 1.</p>
                         </section>
                         <section class="card-info collaboration">
                                 <div class="card-info-title">
                                     <span class="number">02</span>
                                     <h2 class="title">Collaboration</h2>
                                 </div>
-                                <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                                <p class="card-info-text">Work with recruiter to increase your chances of findingtalented athlete.</p>
                         </section>
                         <section class="card-info growth">
                                 <div class="card-info-title">
                                     <span class="number">03</span>
                                     <h2 class="title">Growth</h2>
                                 </div>
-                                <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                                <p class="card-info-text">Save your time, recruit proper athlets for your team.</p>
                         </section>                                    
                 </section> 
                 <section class="card action">
@@ -133,7 +133,7 @@
                           <span class="number">01</span>                          
                       </div>
                       <h2 class="title">Be active</h2>
-                      <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                      <p class="card-info-text">Post videos with your skills, Like and follow others to be more popular.</p>
                   </section>
                   <section class="card-info">
                           <div><img src="./images/img/find-contact_640.jpg" alt="be-active" class="action-img"></div>
@@ -141,7 +141,7 @@
                               <span class="number">02</span>                              
                           </div>
                           <h2 class="title">Find contact</h2>
-                          <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                          <p class="card-info-text">Contact others to find right coach or athlete you are looking for.</p>
                   </section>
                   <section class="card-info">
                           <div><img src="./images/img/work-it_640.jpg" alt="be-active" class="action-img"></div>
@@ -149,7 +149,7 @@
                               <span class="number">03</span>                              
                           </div>
                           <h2 class="title">Work it</h2>
-                          <p class="card-info-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam distinctio reprehenderit quaerat saepe animi, minus suscipit eveniet nostrum voluptatibus eius velit iusto nam consectetur ex blanditiis nobis. Eaque, deleniti perferendis.</p>
+                          <p class="card-info-text">Enjoy being a student athlete, the recruiting process can be overwhelming, we want to make this enjoyable experience.</p>
                   </section>                                    
           </section> 
            </div>
